# sniplook

./: .gitignore  LICENCE  README.md  pyproject.toml
src/: cli.py  config.py  errors.py  format.py  main.py
src/db/: __init__.py  sqlite.py
src/models/: base_snippet.py
src/search/: diff_search.py  sqlite_search.py
tests/models/: test_base_snippet.py
